Archive2/91/ba4f3768174caa/main.cpp
#include <fstream>

int main() {
    std::ofstream fout;
    int i;
    fout >> i;
}
